--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   body {
     background: #111212;
     color: white;
+    overflow-x:hidden;
   }
   
   #header {
@@ -20,12 +21,14 @@
   .container {
     padding: 20px 10%;
     position: relative; /* Add this to make the container a positioning context for absolute positioning */
+    overflow-x: hidden;
   }
   
   nav {
     display: flex;
     align-items: center;
-    justify-content:end
+    justify-content:flex-end
+
   }
   
   .name {
@@ -72,7 +75,7 @@
   }
   .box1{
     width:50%;
-    height: 100vh;
+    height: 100vw;
   }
   .developer{
     display: flex;
@@ -503,6 +506,7 @@
 #about .container{
   margin: 0;
   padding: 0;
+  
 }
 .project-head{
   margin-top: 150px;
