--- a/style.css
+++ b/style.css
@@ -1,600 +1,596 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
-  }
-  html{
-    scroll-behavior: smooth;
-  }
-  body {
-    background: #111212;
-    color: white;
-    overflow-x:hidden;
-  }
-  
-  #header {
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .container {
-    padding: 20px 10%;
-    position: relative; /* Add this to make the container a positioning context for absolute positioning */
-    overflow-x: hidden;
-  }
-  
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content:flex-end
-
-  }
-  
-  .name {
-    width: 250px;
-    position: absolute; /* Add this to take the image out of the normal flow */
-    left: 0; /* Add this to position the image at the extreme left */
-  }
-  
-  nav ul li {
-    display: inline-block;
-    list-style: none;
-    padding-right: 10px;
-    margin-left: 20px;
-    padding-left: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    position: relative;
-  }
-  
-  nav ul li a::after {
-    content: '';
-    width: 0;
-    height: 4px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-  }
-  
-  nav ul li a:hover::after {
-    width: 100%;
-  }
-  
-  
-  .mainbox{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-  }
-  .box1{
-    width:50%;
-    height: 100vw;
-  }
-  .developer{
-    display: flex;
-    margin-top:60px;
-    margin-left:30px;
-  
-  
-  }
-  .web{
-    padding: 5px 25px;
-    background: Linear-gradient (130.08deg, #383528 0%, #191919 100%);
-    box-shadow: 0px 20px 40px #00000070;
-    border: 1px solid #3b3b3b;
-    border-radius: 100px;
-    font-weight:700;
-    margin-right: 10px;
-  }
-  .myname{
-    display: flex;
-    margin-top: 100px;
-    margin-left: 60px;
-    font-size: 40px;
-  }
-  span{
-    color:#ff004f;
-    padding-left: 80px;
-    padding-top: 30px;
-  }
-  .myname p{
-    font-size: 15px;
-    margin-top: 110px;
-    margin-left: 10px;
-  }
-  .headline{
-    width: 100%;
-    margin-top: 40px;
-    text-align: center;
-  }
-  .multiText {
-    font-family: sans-serif;
-    color: #2a6386;
-    font-size: 80px;
-    font-weight: 600;
-    }
-  .box2{
-    width:50%;
-  }
-  
-  .circle{
-    width: 300px;
-    height:300px;
-    border-radius: 50%; 
-    background-color:#111212;
-    overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 4px 6px -1px rgba(0,0,0,0.5);
-    margin-top: 100px;
-    margin-left: 100px;
-  
-  }
-  
-  .img{
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    transition: all 1.1s;
-  }
-  
-  .one{
-    background-image: url("./images/SURYAKIRAN1.png");
-  }
-  .circle:hover .img{
-    transform: scale(1.2);
-  }
-  
-  /*---------------about me-------------------*/
-  
-  #about{
-    padding: 15px;
-    color:#ababab;
-    height: 100vh;
-  }
-  .row{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  .about-col1{
-    flex-basis: 35%;
-  }
-  .about-col1 img{
-    width:100%;
-    border-radius: 15px;
-  }
-  .about-col2{
-    flex-basis: 60%;
-  }
-  .sub{
-    padding: 10px; 
-    font-size: 50px;
-    font-weight: 600px;
-    color: white;
-  }
-  .tab-title{
-    display: flex;
-    margin: 20px 0 40px;
-  }
-  .tab-link{
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-  }
-  .tab-link::after{
-    content: '';
-    width: 0;
-    height: 4px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.5s;
-  }
-  .tab-link.active::after{
-    width: 50%;
-  }
-  .lang{
-    display: flex;
-  }
-  .lang li{
-    padding-right: 15px;
-    color: #fff;
-  }
-  
-  .tab1 ul li{
-    list-style: none;
-    margin: 10px 0;
-  }
-  .heading1{
-    color:#e67112;
-    font-size: 16px;
-  }
-  
-  .tab2 ul li{
-    list-style: none;
-    margin: 10px 0;
-  }
-  .heading2{
-    color:#e67112;
-    font-size: 19px;
-  }
-  .tab3 ul li{
-    list-style: none;
-    margin: 10px 0;
-  }
-  .heading3{
-    color:#e67112;
-    font-size: 18px;
-  }
-  .tab-content{
-    display: none;
-  }
-  .flex{
-    display: flex;
-    justify-content:space-between;
-  }
-  .tab-content.tab-active{
-    display: block;
-  }
-  
-  /*------------------project---------------------------------*/
-  .project-head{
-    width: 100%;
-  }
-  .project-head h2{
-    margin-top: 30px;
-    text-align: center;
-    color:white;
-    font-weight: 700;
-    font-size: 50px;
-  }
-  .project-mainbox1{
-    width: 100%;
-    display: flex;
-    margin-top: 30px;
-    align-items: center;
-    justify-content:center;
-  }
-  
-  .mainbox2{
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-bottom: 20px;
-    padding-top: 20px;
-  }
-  
-  .project-mainbox2{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    margin-top: 30px;
-    align-items: center;
-    justify-content:center;
-  }
-  .projectbox1{
-     box-shadow:0 0 20px 2px rgba(0,0,0,.1);
-     transition: 1s;
-  }
-  .projectbox1 img{
-    width:270px;
-    background-size: cover;
-    background-color: goldenrod;
-    border-radius: 6px;
-  }
-  .projectbox1:hover{
-    transform: scale(1.3);
-    z-index:2;
-  }
-  
-  .project-cont{
-    width: 300px;
-    height: 150px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    position: relative;
-    text-align: center;
-  }
-  .project-cont::before{
-    content: '';
-    position: absolute;
-    Left:0;
-    bottom:0;
-    width:0;
-    box-sizing: border-box;
-    height: 0;
-    border-bottom: 3px solid transparent;
-    border-left: 3px solid transparent;
-    transition: all .8s ease;
-  }
-  .project-cont::after{
-    content: '';
-    position: absolute;
-    right:0;
-    top:0;
-    width:0;
-    box-sizing: border-box;
-    height: 0;
-    border-top: 3px solid transparent;
-    border-right: 3px solid transparent;
-    transition: all .8s ease;
-  }
-
-  .project-cont:hover::after,
-  .project-cont:hover::before{
-    border-color: #ff004f;
-    width: 100%;
-    height: 100%;
-
-  }
-  .project-cont1{
-    font-size: 20px;
-    margin-top: 15px;
-    padding-top: 30px;
-  }
-  .project-cont2{
-    font-size: 13px;
-    margin-top: 10px;
-
-  }
-  .project-cont2 p{
-    text-align: center;
-  }
-  .project-cont2 h6{
-    font-size: 15px;
-  }
-  .project-button{
-
-  }
-  .project-button a{
-    color: white;
-    text-decoration: none;
-    margin-right: 10px;
-  }
-  
-  .project-button i{
-    color: white;
-  }
-  
-  .contactmefooter{
-    margin-bottom: 40px;
-  }
-  .contact-left{
-    width: 100%;
-    height: 100%;
-    margin-top: 60px;
-    margin-left: 100px;
-  }
-  .contact-left h1{
-    font-size: 60px;
-    padding-bottom: 30px;
-  }
-  .contact-left p{
-    font-size: 25px;
-    padding-top: 20px;
-
-  }
-  .socialmedia-links{
-    width: 100%;
-    height:100%;
-    margin-left: 100px;
-    margin-bottom: 60px;
-  }
-  .socialmedia-links a{
-    padding-right: 30px;
-  }
-  .socialmedia-links i{
-    padding-top: 20px;
-  }
-  #phonemail-icon{
-    padding-right: 10px;
-    color:#ff004f
-  }
-  #contactmefooter{
-    width: 100%;
-  }
-  #contactmefooter .container{
-    margin-bottom: 50px;
-    padding: 50px;
-  }
-  #contactmefooter .containerbottom a{
-    margin-bottom: 100px;
-    margin-left: 730px;
-    color: #ff004f;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 100px;
-    cursor: pointer;
-  }  
-  nav .fa-solid{
-    display: none;
-  }
-
-
-@media only screen and (max-width: 600px) {
-  nav .fa-solid{
-    display: block;
-    font-size: 20px;
-  }
-
-  .name {
-    width: 50%;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 25px;
-  }
-  .developer{
-    margin-top: 40px;
-    margin-right: 20px;
-  }
-  .web{
-    padding: 5px 30px;
-  }
-  .myname{
-    margin-top: 40px;
-    display:block;
-  }
-  .myname h2{
-    font-size: 35px;
-  }
-  span.multiText{
-    margin-left: 20px;
-    padding: 4px;
-    font-size: 70px;
-  } 
-  nav .fa-solid{
-    display: block;
-    font-size: 20px;
-  }
-  nav ul{
-    background:#ff004f;
-    position: fixed;
-    top: 0;
-    right:-400px;
-    width: 400px;
-    height: 350px;
-    padding-top: 50px;
-    z-index: 2;
-    transition:right 0.5s;
-  }
-  nav ul li{
-    display: block;
-    margin: 25px;
-  }
-  nav ul .fa-solid{
-    position: absolute;
-    top: 10px;
-    left:10px;
-    cursor: pointer;
-  }
-
-  div .row{
-    margin-top: 100px;
-    width: 550px;
-    margin-left: 55px;
-  }
-  div .about-col1{
-    margin-left: 50px;
-  }
-  div .sub{
-    font-size: 40px;
-    margin-left: 50px;
-  }
-  div p{
-    font-size: 10px;
-    justify-content: left;
-  }
-#about{
-  margin: 0;
-  padding:0;
-}
-#about .container{
   margin: 0;
   padding: 0;
-  
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
-.project-head{
-  margin-top: 150px;
+html{
+  scroll-behavior: smooth;
+}
+body {
+  background: #111212;
+  color: white;
 }
 
-#contactmefooter{
-  padding: 30px;
+#header {
+  width: 100%;
+  height: 100vh;
 }
-.containerbottom{
+
+.container {
+  padding: 20px 10%;
+  position: relative; /* Add this to make the container a positioning context for absolute positioning */
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content:end
+}
+
+.name {
+  width: 250px;
+  position: absolute; /* Add this to take the image out of the normal flow */
+  left: 0; /* Add this to position the image at the extreme left */
+}
+
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  padding-right: 10px;
+  margin-left: 20px;
+  padding-left: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  position: relative;
+}
+
+nav ul li a::after {
+  content: '';
+  width: 0;
+  height: 4px;
+  background: #ff004f;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
+}
+
+nav ul li a:hover::after {
   width: 100%;
 }
+
+
+.mainbox{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+.box1{
+  width:50%;
+  height: 100vh;
+}
+.developer{
+  display: flex;
+  margin-top:60px;
+  margin-left:30px;
+
+
+}
+.web{
+  padding: 5px 25px;
+  background: Linear-gradient (130.08deg, #383528 0%, #191919 100%);
+  box-shadow: 0px 20px 40px #00000070;
+  border: 1px solid #3b3b3b;
+  border-radius: 100px;
+  font-weight:700;
+  margin-right: 10px;
+}
+.myname{
+  display: flex;
+  margin-top: 100px;
+  margin-left: 60px;
+  font-size: 40px;
+}
+span{
+  color:#ff004f;
+  padding-left: 80px;
+  padding-top: 30px;
+}
+.myname p{
+  font-size: 15px;
+  margin-top: 110px;
+  margin-left: 10px;
+}
+.headline{
+  width: 100%;
+  margin-top: 40px;
+  text-align: center;
+}
+.multiText {
+  font-family: sans-serif;
+  color: #2a6386;
+  font-size: 80px;
+  font-weight: 600;
+  }
+.box2{
+  width:50%;
+}
+
+.circle{
+  width: 300px;
+  height:300px;
+  border-radius: 50%; 
+  background-color:#111212;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.5);
+  margin-top: 100px;
+  margin-left: 100px;
+
+}
+
+.img{
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  transition: all 1.1s;
+}
+
+.one{
+  background-image: url("./images/SURYAKIRAN1.png");
+}
+.circle:hover .img{
+  transform: scale(1.2);
+}
+
+/*---------------about me-------------------*/
+
+#about{
+  padding: 15px;
+  color:#ababab;
+  height: 100vh;
+}
+.row{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.about-col1{
+  flex-basis: 35%;
+}
+.about-col1 img{
+  width:100%;
+  border-radius: 15px;
+}
+.about-col2{
+  flex-basis: 60%;
+}
+.sub{
+  padding: 10px; 
+  font-size: 50px;
+  font-weight: 600px;
+  color: white;
+}
+.tab-title{
+  display: flex;
+  margin: 20px 0 40px;
+}
+.tab-link{
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+.tab-link::after{
+  content: '';
+  width: 0;
+  height: 4px;
+  background: #ff004f;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.5s;
+}
+.tab-link.active::after{
+  width: 50%;
+}
+.lang{
+  display: flex;
+}
+.lang li{
+  padding-right: 15px;
+  color: #fff;
+}
+
+.tab1 ul li{
+  list-style: none;
+  margin: 10px 0;
+}
+.heading1{
+  color:#e67112;
+  font-size: 16px;
+}
+
+.tab2 ul li{
+  list-style: none;
+  margin: 10px 0;
+}
+.heading2{
+  color:#e67112;
+  font-size: 19px;
+}
+.tab3 ul li{
+  list-style: none;
+  margin: 10px 0;
+}
+.heading3{
+  color:#e67112;
+  font-size: 18px;
+}
+.tab-content{
+  display: none;
+}
+.flex{
+  display: flex;
+  justify-content:space-between;
+}
+.tab-content.tab-active{
+  display: block;
+}
+
+/*------------------project---------------------------------*/
+.project-head{
+  width: 100%;
+}
+.project-head h2{
+  margin-top: 30px;
+  text-align: center;
+  color:white;
+  font-weight: 700;
+  font-size: 50px;
+}
+.project-mainbox1{
+  width: 100%;
+  display: flex;
+  margin-top: 30px;
+  align-items: center;
+  justify-content:center;
+}
+
+.mainbox2{
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+.project-mainbox2{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin-top: 30px;
+  align-items: center;
+  justify-content:center;
+}
+.projectbox1{
+   box-shadow:0 0 20px 2px rgba(0,0,0,.1);
+   transition: 1s;
+}
+.projectbox1 img{
+  width:270px;
+  background-size: cover;
+  background-color: goldenrod;
+  border-radius: 6px;
+}
+.projectbox1:hover{
+  transform: scale(1.3);
+  z-index:2;
+}
+
+.project-cont{
+  width: 300px;
+  height: 150px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  position: relative;
+  text-align: center;
+}
+.project-cont::before{
+  content: '';
+  position: absolute;
+  Left:0;
+  bottom:0;
+  width:0;
+  box-sizing: border-box;
+  height: 0;
+  border-bottom: 3px solid transparent;
+  border-left: 3px solid transparent;
+  transition: all .8s ease;
+}
+.project-cont::after{
+  content: '';
+  position: absolute;
+  right:0;
+  top:0;
+  width:0;
+  box-sizing: border-box;
+  height: 0;
+  border-top: 3px solid transparent;
+  border-right: 3px solid transparent;
+  transition: all .8s ease;
+}
+
+.project-cont:hover::after,
+.project-cont:hover::before{
+  border-color: #ff004f;
+  width: 100%;
+  height: 100%;
+
+}
+.project-cont1{
+  font-size: 20px;
+  margin-top: 15px;
+  padding-top: 30px;
+}
+.project-cont2{
+  font-size: 13px;
+  margin-top: 10px;
+
+}
+.project-cont2 p{
+  text-align: center;
+}
+.project-cont2 h6{
+  font-size: 15px;
+}
+.project-button{
+
+}
+.project-button a{
+  color: white;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.project-button i{
+  color: white;
+}
+
+.contactmefooter{
+  margin-bottom: 40px;
+}
+.contact-left{
+  width: 100%;
+  height: 100%;
+  margin-top: 60px;
+  margin-left: 100px;
+}
+.contact-left h1{
+  font-size: 60px;
+  padding-bottom: 30px;
+}
+.contact-left p{
+  font-size: 25px;
+  padding-top: 20px;
+
+}
+.socialmedia-links{
+  width: 100%;
+  height:100%;
+  margin-left: 100px;
+  margin-bottom: 60px;
+}
+.socialmedia-links a{
+  padding-right: 30px;
+}
+.socialmedia-links i{
+  padding-top: 20px;
+}
+#phonemail-icon{
+  padding-right: 10px;
+  color:#ff004f
+}
+#contactmefooter{
+  width: 100%;
+}
+#contactmefooter .container{
+  margin-bottom: 50px;
+  padding: 50px;
+}
 #contactmefooter .containerbottom a{
-  margin-bottom: 20px;
-  margin-left: 230px;
-  margin-right: 30px;
+  margin-bottom: 100px;
+  margin-left: 730px;
   color: #ff004f;
   text-decoration: none;
   font-size: 20px;
+  padding: 100px;
+  cursor: pointer;
+}  
+nav .fa-solid{
+  display: none;
+}
+
+
+@media only screen and (max-width: 600px) {
+nav .fa-solid{
+  display: block;
+  font-size: 20px;
+}
+
+.name {
+  width: 50%;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-left: 25px;
+}
+.developer{
+  margin-top: 40px;
+  margin-right: 20px;
+}
+.web{
+  padding: 5px 30px;
+}
+.myname{
+  margin-top: 40px;
+  display:block;
+}
+.myname h2{
+  font-size: 35px;
+}
+span.multiText{
+  margin-left: 20px;
+  padding: 4px;
+  font-size: 70px;
+} 
+nav .fa-solid{
+  display: block;
+  font-size: 20px;
+}
+nav ul{
+  background:#ff004f;
+  position: fixed;
+  top: 0;
+  right:-400px;
+  width: 400px;
+  height: 350px;
+  padding-top: 50px;
+  z-index: 2;
+  transition:right 0.5s;
+}
+nav ul li{
+  display: block;
+  margin: 25px;
+}
+nav ul .fa-solid{
+  position: absolute;
+  top: 10px;
+  left:10px;
+  cursor: pointer;
+}
+
+div .row{
+  margin-top: 100px;
+  width: 550px;
+  margin-left: 55px;
+}
+div .about-col1{
+  margin-left: 50px;
+}
+div .sub{
+  font-size: 40px;
+  margin-left: 50px;
+}
+div p{
+  font-size: 10px;
+  justify-content: left;
+}
+#about{
+margin: 0;
+padding:0;
+}
+#about .container{
+margin: 0;
+padding: 0;
+}
+.project-head{
+margin-top: 150px;
+}
+
+#contactmefooter{
+padding: 30px;
+}
+.containerbottom{
+width: 100%;
+}
+#contactmefooter .containerbottom a{
+margin-bottom: 20px;
+margin-left: 230px;
+margin-right: 30px;
+color: #ff004f;
+text-decoration: none;
+font-size: 20px;
 }  
 
 
-  
-
-
-  #header {
-    position: relative;
-  }
-
-  .container {
-    padding: 20px 5%;
-  }
 
 
 
-  .mainbox {
-    flex-direction: column;
-  }
+#header {
+  position: relative;
+}
 
-  .box1,
-  .box2 {
-    width: 100%;
-  }
+.container {
+  padding: 20px 5%;
+}
 
-  .circle {
-    margin: 20px auto;
-  }
 
-  .project-mainbox1,
-  .project-mainbox2 {
-    display: flex;
-    flex-direction: column;
-    margin-left: 30px;
-  }
 
-  .mainbox2 {
-    padding: 20px;
-  }
+.mainbox {
+  flex-direction: column;
+}
 
-  .projectbox1 img {
-    width: 100%;
-  }
+.box1,
+.box2 {
+  width: 100%;
+}
 
-  .contact-left,
-  .socialmedia-links {
-    margin: 20px 0;
-  }
+.circle {
+  margin: 20px auto;
+}
+
+.project-mainbox1,
+.project-mainbox2 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.mainbox2 {
+  padding: 20px;
+}
+
+.projectbox1 img {
+  width: 100%;
+}
+
+.contact-left,
+.socialmedia-links {
+  margin: 20px 0;
+}
 }
 
 @media only screen and (min-width: 769px) {
-  nav ul {
-    display: flex;
-  }
+nav ul {
+  display: flex;
+}
 
-  nav .fa-solid {
-    display: none;
-  }
+nav .fa-solid {
+  display: none;
+}
 
-  .mainbox {
-    flex-direction: row;
-  }
+.mainbox {
+  flex-direction: row;
+}
 
-  .box1,
-  .box2 {
-    width: 50%;
-  }
+.box1,
+.box2 {
+  width: 50%;
+}
 
-  .project-mainbox1,
-  .project-mainbox2 {
-    flex-direction: row;
-  }
+.project-mainbox1,
+.project-mainbox2 {
+  flex-direction: row;
+}
 }
